--- a/rezervace.html
+++ b/rezervace.html
@@ -78,17 +78,15 @@
 
           <input
             required
-            type="text"
+            type="date"
             placeholder="Datum přijzdu"
-            onfocus="(this.type='date')"
             id="dateFrom"
           />
 
           <input
             required
-            type="text"
+            type="dateg"
             placeholder="Datum odjezdu"
-            onfocus="(this.type='date')"
             id="dateTo"
           />
         </form>
