--- a/cenik.html
+++ b/cenik.html
@@ -55,7 +55,7 @@
       <section class="section-c">
         <div class="main-content-c">
 
-            <div class="underline"> <h1 class="page-main-heading">Ceník</h1></div>
+            <div> <h1 class="page-main-heading">Ceník</h1></div>
            
             <div>
                 <h4>Apartmán č. 1</h4>
