--- a/kontakt.html
+++ b/kontakt.html
@@ -57,11 +57,13 @@
         <h1 class="page-main-heading">Kontakt</h1>
         <div class="contact-box">
           <ul>
-            <li>Apartmán dobra naděje</li>
+            <li>Apartmán Dobrá naděje</li>
             <li>Mánesova 649</li>
+            <li>Uherské Hradiště</li>
             <li>686 01</li>
-            <li><i class="fa-solid fa-phone"></i>+420 775 93 11 10</li>
-            <li><i class="fa fa-envelope"></i>dobra.nadejeseznam.cz</li>
+            <li><i class="fa-solid fa-phone"></i>+420 777 12 04 23</li>
+            <li><i class="fa fa-envelope"></i>dobra.nadeje@seznam.cz</li>
+            <li><i class="fa fa-envelope"></i>dobra.nadeje@seznam.cz</li>
           </ul>
         </div>
 
