--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="section-inner-center">
         <h3>Ubytování <br />v Uherském Hradišti</h3>
         <p>+420 775 931 110</p>
-        <a href="#" class="btn">
+        <a href="rezervace.html" class="btn">
           <div class="hover"></div>
           <span><p>Poptávka</p></span>
         </a>
