--- a/rezervace.html
+++ b/rezervace.html
@@ -83,12 +83,7 @@
             id="dateFrom"
           />
 
-          <input
-            required
-            type="dateg"
-            placeholder="Datum odjezdu"
-            id="dateTo"
-          />
+          <input required type="date" placeholder="Datum odjezdu" id="dateTo" />
         </form>
         <button id="testBtn">Odeslat</button>
       </div>
