--- a/rezervace.html
+++ b/rezervace.html
@@ -76,14 +76,9 @@
           <input required type="number" placeholder="Telefon" id="tel" />
           <h3>Pobyt od-do</h3>
 
-          <input
-            required
-            type="date"
-            placeholder="Datum přijzdu"
-            id="dateFrom"
-          />
+          <input required type="date" id="dateFrom" />
 
-          <input required type="date" placeholder="Datum odjezdu" id="dateTo" />
+          <input required type="date" id="dateTo" />
         </form>
         <button id="testBtn">Odeslat</button>
       </div>
