--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
         <li class="mobile-only">
           <a href="ubytovani.html">Ubytování</a>
         </li>
-        <li class="mobile-only"><a href="cenik.html">Cenik</a></li>
+        <li class="mobile-only"><a href="cenik.html">Ceník</a></li>
         <li class="mobile-only"><a href="rezervace.html">Rezervace</a></li>
         <li class="mobile-only"><a href="kontakt.html">Kontakt</a></li>
       </ul>
@@ -37,7 +37,7 @@
         <ul>
           <li><a href="index.html">Hlávní Stránka</a></li>
           <li><a href="ubytovani.html">Ubytování</a></li>
-          <li><a href="cenik.html">Ceník</a></li>
+          <li><a href="ceník.html">Ceník</a></li>
           <li><a href="rezervace.html">Rezervace</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
@@ -61,9 +61,8 @@
             <li>Mánesova 649</li>
             <li>Uherské Hradiště</li>
             <li>686 01</li>
-            <li><i class="fa-solid fa-phone"></i>+420 777 12 04 23</li>
-            <li><i class="fa fa-envelope"></i>dobra.nadeje@seznam.cz</li>
-            <li><i class="fa fa-envelope"></i>dobra.nadeje@seznam.cz</li>
+            <li><i class="fa-solid fa-phone"></i> +420 777 12 04 23</li>
+            <li><i class="fa fa-envelope"></i> dobra.nadeje@seznam.cz</li>
           </ul>
         </div>
 
