--- a/cenik.html
+++ b/cenik.html
@@ -19,7 +19,7 @@
         <li class="mobile-only">
           <a href="ubytovani.html">Ubytování</a>
         </li>
-        <li class="mobile-only"><a href="cenik.html">Cenik</a></li>
+        <li class="mobile-only"><a href="cenik.html">Ceník</a></li>
         <li class="mobile-only"><a href="rezervace.html">Rezervace</a></li>
         <li class="mobile-only"><a href="kontakt.html">Kontakt</a></li>
       </ul>
