--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="mobile-only">
           <a href="ubytovani.html">Ubytování</a>
         </li>
-        <li class="mobile-only"><a href="cenik.html">Cenik</a></li>
+        <li class="mobile-only"><a href="cenik.html">Ceník</a></li>
         <li class="mobile-only"><a href="rezervace.html">Rezervace</a></li>
         <li class="mobile-only"><a href="kontakt.html">Kontakt</a></li>
       </ul>
@@ -53,7 +53,7 @@
     <section class="section-a bg-hero">
       <div class="section-inner-center">
         <h3>Ubytování <br />v Uherském Hradišti</h3>
-        <p>+420 775 931 110</p>
+        <p>+420 777 12 04 23</p>
         <a href="rezervace.html" class="btn">
           <div class="hover"></div>
           <span><p>Poptávka</p></span>
