--- a/rezervace.html
+++ b/rezervace.html
@@ -21,7 +21,7 @@
         <li class="mobile-only">
           <a href="ubytovani.html">Ubytování</a>
         </li>
-        <li class="mobile-only"><a href="cenik.html">Cenik</a></li>
+        <li class="mobile-only"><a href="cenik.html">Ceník</a></li>
         <li class="mobile-only"><a href="rezervace.html">Rezervace</a></li>
         <li class="mobile-only"><a href="kontakt.html">Kontakt</a></li>
       </ul>
@@ -37,7 +37,7 @@
         <ul>
           <li><a href="index.html">Hlávní Stránka</a></li>
           <li><a href="ubytovani.html">Ubytování</a></li>
-          <li><a href="cenik.html">Ceník</a></li>
+          <li><a href="ceník.html">Ceník</a></li>
           <li><a href="rezervace.html">Rezervace</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
