pre production check

--- a/cenik.html
+++ b/cenik.html
@@ -35,7 +35,7 @@
         <nav class="desktop-main-menu">
           <ul>
             <li><a href="index.html">Hlávní Stránka</a></li>
-            <li><a href="ubytovani.html">Ubytování</a></li>
+            <li><a href="ubytovani.html">Apartmány</a></li>
             <li><a href="cenik.html">Ceník</a></li>
             <li><a href="rezervace.html">Rezervace</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
@@ -59,16 +59,16 @@
            
             <div>
                 <h4>Apartmán č. 1</h4>
-                <p>1 – 2 osoby 1 100,-/noc</p>
-                <p>3 osoby 1 300,-/noc</p>
+                <p>1 – 2 osoby - 1 100,-/noc</p>
+                <p>3 osoby - 1 300,-/noc</p>
            
             </div>
             <div>
                 <h4>Apartmán č. 2</h4>
-                <p>1 – 2 osoby 1 200,-/noc</p>
-                <p>3 osoby 1 500,-/noc</p>
-                <p>4 osoby 1 800,-/noc</p>
-                <p>5 osob 2 000,-/noc</p>
+                <p>1 – 2 osoby - 1 200,-/noc</p>
+                <p>3 osoby - 1 500,-/noc</p>
+                <p>4 osoby - 1 800,-/noc</p>
+                <p>5 osob - 2 000,-/noc</p>
             </div>
             <div class="container-small-text">
                 <p>Místní ubytovací poplatky jsou zahrnuty v ceně.
