--- a/kontakt.html
+++ b/kontakt.html
@@ -36,7 +36,7 @@
       <nav class="desktop-main-menu">
         <ul>
           <li><a href="index.html">Hlávní Stránka</a></li>
-          <li><a href="ubytovani.html">Ubytování</a></li>
+          <li><a href="ubytovani.html">Apartmány</a></li>
           <li><a href="ceník.html">Ceník</a></li>
           <li><a href="rezervace.html">Rezervace</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
