--- a/ubytovani.html
+++ b/ubytovani.html
@@ -43,7 +43,7 @@
       <nav class="desktop-main-menu">
         <ul>
           <li><a href="index.html">Hlávní Stránka</a></li>
-          <li><a href="ubytovani.html">Ubytování</a></li>
+          <li><a href="ubytovani.html">Apartmány</a></li>
           <li><a href="cenik.html">Ceník</a></li>
           <li><a href="rezervace.html">Rezervace</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
@@ -68,8 +68,8 @@
         Apartmán Dobrá naděje nabízí příjemné ubytování ve dvou prostorných a plně
         vybavených apartmánech.
         Apartmány jsou vybaveny vlastní zařízenou kuchyňkou, jídelním koutem, ložnicí,
-        zimní verandou nebo balkonem a vysokorychlostním internetem (WIFI). Kola je
-        možno uzamknout na zahradě ve stojanu na kola.
+        zimní verandou nebo balkonem a vysokorychlostním internetem (WIFI). Parkování je možné vedle domu na veřejném parkovišti. Kola je
+        možno uzamknout na zahradě ve stojanu na kola. 
         Apartmány jsou situované v přízemí a mají každý svůj samostatný vstup.</p>
         <div class="img-ubytovani-main"></div>
 
@@ -85,23 +85,23 @@
             V ložnici je manželská postel a rozkládací dvoulůžko. Apartmán je vhodný pro 1-3
             osoby.</br>
             <div class="highlight div-pricelist">Cena apartmánu:
-              1 100,- Kč/noc/1-2 osoby
+              1 100,- Kč/noc/1-2 osoby,
               1 300,- Kč/noc/3 osoby</br>
-              Při pobytu více než 5 nocí můžeme poskytnout individuální slevu.</div>
+              </div>
           </p>
           <div class="galery-images">
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
-            <div class="img-ap"></div>
+
+            <div class="img-ap2"></div>
+            <div class="img-ap2"></div>
+            <div class="img-ap2"></div>
+            <div class="img-ap2"></div>
+            <div class="img-ap2"></div>
+            <div class="img-ap2"></div>
+            <div class="img-ap2"></div>
+            <div class="img-ap2"></div>
+            <div class="img-ap2"></div>
           </div>
-          <a href="/rezervace.html" class="btn-cen">
+          <a href="/rezervace.html" class="btn-cen" id="btn-ap-1">
             <div class="hover"></div>
             <span>Poptávka</span>
           </a>
@@ -118,23 +118,24 @@
             V ložnici je manželská postel a v ložnici 2 jsou 2 samostatná lůžka. V centrální
             místnosti je rozkládací pohovka. Apartmán je vhodný pro 1-5 osob..</br>
             <div class="highlight div-pricelist">Cena apartmánu:
-              1 200,- Kč/noc/1-2 osoby
-              1 500,- Kč/noc/3 osoby
-              1 800,- Kč/noc/4 osoby
+              1 200,- Kč/noc/1-2 osoby,
+              1 500,- Kč/noc/3 osoby,
+              1 800,- Kč/noc/4 osoby,
               2 000,- Kč/noc/5 osob</br>
-              Při pobytu více než 5 nocí můžeme poskytnout individuální slevu.</div>
+            </div>
           </p>
           <div class="galery-images2">
-            <div class="img-ap2"></div>
-            <div class="img-ap2"></div>
-            <div class="img-ap2"></div>
-            <div class="img-ap2"></div>
-            <div class="img-ap2"></div>
-            <div class="img-ap2"></div>
-            <div class="img-ap2"></div>
-            <div class="img-ap2"></div>
+            <div class="img-ap"></div>
+            <div class="img-ap"></div>
+            <div class="img-ap"></div>
+            <div class="img-ap"></div>
+            <div class="img-ap"></div>
+            <div class="img-ap"></div>
+            <div class="img-ap"></div>
+            <div class="img-ap"></div>
+            <div class="img-ap"></div>
           </div>
-          <a href="/rezervace.html"class="btn-cen">
+          <a href="/rezervace.html"class="btn-cen" id="btn-ap-2">
             <div class="hover"></div>
             <span>Poptávka</span>
           </a>
@@ -150,5 +151,6 @@
       </ul>
     </footer>
     <script src="js/script.js"></script>
+    <script src="js/buttonHandler.js"></script>
   </body>
 </html>
