--- a/rezervace.html
+++ b/rezervace.html
@@ -36,8 +36,8 @@
       <nav class="desktop-main-menu">
         <ul>
           <li><a href="index.html">Hlávní Stránka</a></li>
-          <li><a href="ubytovani.html">Ubytování</a></li>
-          <li><a href="ceník.html">Ceník</a></li>
+          <li><a href="ubytovani.html">Apartmány</a></li>
+          <li><a href="cenik.html">Ceník</a></li>
           <li><a href="rezervace.html">Rezervace</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
@@ -57,8 +57,8 @@
         <h1 class="page-main-heading">Nezávazná rezervace</h1>
         <form>
           <select required id="apartman" name="aparmant">
-            <option value="ap1">Apartmán 1</option>
-            <option value="ap2">Apartmán 2</option>
+            <option value="ap1">Apartmán 1 (1-3 osoby)</option>
+            <option value="ap2">Apartmán 2 - (1-5 osob)</option>
           </select>
 
           <h3>Kontaktní údaje</h3>
@@ -71,6 +71,8 @@
             type="number"
             placeholder="Počet osob"
             id="numberOfG"
+            min="1"
+            max="5"
           />
           <input required type="email" placeholder="Email" id="email" />
           <input required type="number" placeholder="Telefon" id="tel" />
@@ -80,6 +82,7 @@
             type="date"
             placeholder="Datum přijzdu"
             id="dateFrom"
+            min="2022-01-01"
           />
           <h5>Pobyt do:</h5>
 
@@ -87,6 +90,7 @@
         </form>
         <button id="testBtn">Odeslat</button>
       </div>
+      <button id="test1">adasdasd</button>
     </section>
 
     <!-- Fotter -->
