--- a/kontakt.html
+++ b/kontakt.html
@@ -37,7 +37,7 @@
         <ul>
           <li><a href="index.html">Hlávní Stránka</a></li>
           <li><a href="ubytovani.html">Apartmány</a></li>
-          <li><a href="ceník.html">Ceník</a></li>
+          <li><a href="cenik.html">Ceník</a></li>
           <li><a href="rezervace.html">Rezervace</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
