--- a/rezervace.html
+++ b/rezervace.html
@@ -66,14 +66,8 @@
           <input required type="text" placeholder="Jméno" id="fname" />
 
           <input required type="text" placeholder="Příjmení" id="lname" />
-          <input
-            required
-            type="number"
-            placeholder="Počet osob"
-            id="numberOfG"
-            min="1"
-            max="5"
-          />
+          <input required type="number" placeholder="Počet osob" id="numberOfG"
+          min="1" max="5" inputmode="decimal />
           <input required type="email" placeholder="Email" id="email" />
           <input required type="number" placeholder="Telefon" id="tel" />
           <h5>Pobyt od:</h5>
