--- a/ubytovani.html
+++ b/ubytovani.html
@@ -101,7 +101,7 @@
             <div class="img-ap2"></div>
             <div class="img-ap2"></div>
           </div>
-          <a href="/rezervace.html" class="btn-cen" id="btn-ap-1">
+          <a href="rezervace.html" class="btn-cen" id="btn-ap-1">
             <div class="hover"></div>
             <span>Poptávka</span>
           </a>
@@ -135,7 +135,7 @@
             <div class="img-ap"></div>
             <div class="img-ap"></div>
           </div>
-          <a href="/rezervace.html"class="btn-cen" id="btn-ap-2">
+          <a href="rezervace.html"class="btn-cen" id="btn-ap-2">
             <div class="hover"></div>
             <span>Poptávka</span>
           </a>
