--- a/cenik.html
+++ b/cenik.html
@@ -19,6 +19,7 @@
         <li class="mobile-only">
           <a href="ubytovani.html">Ubytování</a>
         </li>
+        <li class="mobile-only"><a href="ubytovani.html">Apartmány</a></li>
         <li class="mobile-only"><a href="cenik.html">Ceník</a></li>
         <li class="mobile-only"><a href="rezervace.html">Rezervace</a></li>
         <li class="mobile-only"><a href="kontakt.html">Kontakt</a></li>
@@ -76,7 +77,7 @@
             </div>
 
         </div>
-        <a href="/rezervace.html" class="btn-cen">
+        <a href="rezervace.html" class="btn-cen">
             <div class="hover"></div>
             <span>Poptávka</span>
           </a>
