--- a/rezervace.html
+++ b/rezervace.html
@@ -21,6 +21,7 @@
         <li class="mobile-only">
           <a href="ubytovani.html">Ubytování</a>
         </li>
+        <li class="mobile-only"><a href="ubytovani.html">Apartmány</a></li>
         <li class="mobile-only"><a href="cenik.html">Ceník</a></li>
         <li class="mobile-only"><a href="rezervace.html">Rezervace</a></li>
         <li class="mobile-only"><a href="kontakt.html">Kontakt</a></li>
@@ -75,7 +76,7 @@
             pattern="[0-9]*"
           />
           <input required type="email" placeholder="Email" id="email" />
-          <input required type="number" placeholder="Telefon" id="tel" />
+          <input required type="tel" placeholder="Telefon" id="tel" />
           <h5>Pobyt od:</h5>
           <input
             required
