--- a/thankyoupage.html
+++ b/thankyoupage.html
@@ -19,6 +19,7 @@
         <li class="mobile-only">
           <a href="ubytovani.html">Ubytování</a>
         </li>
+        <li class="mobile-only"><a href="ubytovani.html">Apartmány</a></li>
         <li class="mobile-only"><a href="cenik.html">Ceník</a></li>
         <li class="mobile-only"><a href="rezervace.html">Rezervace</a></li>
         <li class="mobile-only"><a href="kontakt.html">Kontakt</a></li>
